[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "http_client"
version = "1.0.0"
description = "A reusable HTTP client for synchronous and asynchronous requests."
authors = [
    { name = "Ryu-qq", email = "fbtkdals2@gmail.com" }
]
dependencies = [
    "aiohttp>=3.8.0",
    "requests>=2.25.1",
    "python-dotenv>=0.21.0",
    "injector>=0.18.4",
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]